--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "sourceMap": true,                     
     "outDir": "./build",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "moduleResolution": "node",
         "baseUrl": ".", 
@@ -17,5 +17,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*", "__tests__/**/*"],
+  "include": ["src/**/*"],
+  "exclude": [ "src/__tests__/**/*"]
 }
